--- a/web/index.html
+++ b/web/index.html
@@ -34,6 +34,10 @@
   <meta content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" name="viewport">
   
   
+  
+  
+  
+  
   <style id="splash-screen-style">
     html {
       height: 100%
@@ -42,7 +46,7 @@
     body {
       margin: 0;
       min-height: 100%;
-      background-color: #2196F3;
+      background-color: #3A405A;
           background-size: 100% 100%;
     }
 
@@ -90,6 +94,12 @@
       position: absolute;
       bottom: 0;
       right: 0;
+    }
+
+    @media (prefers-color-scheme: dark) {
+      body {
+        background-color: #3A405A;
+          }
     }
   </style>
   <script id="splash-screen-script">
